--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,8 @@
 </head>
 
 <body>
-
+    
+  
     <!-- ======= Top Bar ======= -->
     <section id="topbar" class="d-flex align-items-center">
         <div class="container d-flex justify-content-center justify-content-md-between">
@@ -74,29 +75,9 @@
                     <li><a href="@Url.Action("Index","DistrictMunicipality")">Municipality</a></li>
                     <li><a href="@Url.Action("Index","Employees")">Employees</a></li>
                     <li><a href="@Url.Action("Index","Managers")">Managers</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li class="dropdown">
-                        <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li class="dropdown">
-                                <a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Drop Down 2</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="@Url.Action("Pricing","Home")">Pricing</a></li>
+                    <li><a href="@Url.Action("Blog","Home")">Blog</a></li>
+                    <li><a href="@Url.Action("Contact","Home")">Contact</a></li>
                     @if (User.Identity.IsAuthenticated)
                     {
                         <div style="margin-left:20px;" class="navbar float-right">
@@ -110,7 +91,7 @@
                             </div>
                             <a style="margin-left:10px;" class="btn btn-sm btn-danger" asp-controller="Account" asp-action="Logout"> <span style="padding-right:5px;">Sign Out</span></a>
 
-                           
+
                         </div>
                     }
                 </ul>
@@ -120,6 +101,11 @@
 
         </div>
     </header><!-- End Header -->
+  
+
+
+
+  <!--Home partial view gövdesi-->
     <!-- ======= Hero Section ======= -->
     <section id="hero">
         <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -173,6 +159,8 @@
 
         </div>
     </section><!-- End Hero -->
+
+   
 
     <main id="main">
         @RenderBody()
@@ -420,6 +408,7 @@
 
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
+
     <footer id="footer">
 
         <div class="footer-top">
@@ -494,6 +483,9 @@
             </div>
         </div>
     </footer><!-- End Footer -->
+    
+
+ 
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
