--- a/Views/Shared/_LayoutEmp.cshtml
+++ b/Views/Shared/_LayoutEmp.cshtml
@@ -50,7 +50,7 @@
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
             </div>
         </div>
     </section>
@@ -71,29 +71,9 @@
                     <li><a href="@Url.Action("Index","DistrictMunicipality")">Municipality</a></li>
                     <li><a href="@Url.Action("Index","Employees")">Employees</a></li>
                     <li><a href="@Url.Action("Index","Managers")">Managers</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li class="dropdown">
-                        <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li class="dropdown">
-                                <a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Drop Down 2</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="@Url.Action("Pricing","Home")">Pricing</a></li>
+                    <li><a href="@Url.Action("Blog","Home")">Blog</a></li>
+                    <li><a href="@Url.Action("Contact","Home")">Contact</a></li>
                     @if (User.Identity.IsAuthenticated)
                     {
                         <div style="margin-left:20px;" class="navbar float-right">
@@ -117,6 +97,8 @@
         </div>
     </header><!-- End Header -->
 
+  
+
     <main id="main">
 
         <!-- ======= Breadcrumbs ======= -->
@@ -124,16 +106,18 @@
             <div class="container">
 
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>About</h2>
+                    <h2>Employees</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
-                        <li>About</li>
+                        <li>Employees</li>
                     </ol>
                 </div>
 
             </div>
         </section><!-- End Breadcrumbs -->
-        @RenderBody()
+        
+        <br />
+        <div> @RenderBody()</div>
         <!-- ======= About Us Section ======= -->
         <section id="about-us" class="about-us">
             <div class="container">
